--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@
 
 .widget__forecast {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .widget__day-item {
@@ -179,6 +179,10 @@
 .widget__form {
   position: absolute;
   inset: 5px 5px auto;
+}
+
+.widget__form_none {
+  display: none;
 }
 
 .widget__input {
